# Robocar

./: .gitignore  AStar.c  AStar1.c  AStar2.c  CMakeLists.txt  CommsThroughputLatencyGraphs.md  Direction.c  LICENSE  MSP_BLE_Latency.c  MSP_BLE_Throughput.c  MSP_M5.c  MappingAndNavigation.c  MotorWithPID.c  Pico-M5stickC-UART-Throughput  Pico_BLE_Latency.c  README.md  Ultrasonic.c  VisitedCoordinates.c  dashboard_withMap.json  main.c  motor_code  motor_code.c
Communications/: READMEcomms.md
Communications/M5StickC Plus/: m5comms.m5f
Communications/MSP/: MSP_M5.c  MSP_UART_Throughput.c
Communications/Pico/: CMakeLists.txt  Pico_BLE.c  Pico_M5.c  Pico_M5Stick_UART_Throughput.c  Pico_M5_Throughput.c  README.md
accelerometer/: MPU6050.c  README.md  main.c
accelerometer/inc/: MPU6050.h
accelerometer/src/: MPU6050.c  main.c
barcode/: .gitignore  CMakeLists.txt  README.md  main.c
barcode/install/: BARCODE.uf2
inc/: MPU6050.h
mapping-navigation/: Mapping&Navigation.c  MappingAndNavDemo.txt
motor/: CMakeLists.txt
motor-pico/: CMakeLists.txt  Makefile  main.c
motor-pico/pico-sdk/: Makefile  cmake_install.cmake
pwm_pid/: MotorWithPID.c  README  README.md  startup_msp432p401r_ccs.c
src/: MPU6050.c  main.c  mainWithAverageAlgo  mainWithAverageAlgo.c  mainWithMovingAvg.c
ultrasonic/: README.md  main.c
unfinisedCodeForReference/: AStar1.c  MSP_BLE_Latency  MSP_BLE_Latency.c  MSP_BLE_Throughput  MSP_BLE_Throughput.c  MotorWithPID.c  Pico_BLE.c  UpdatedCode  comms.c  main.c  motor_code.c  readme.md
wheel-encoder-pico/: CMakeLists.txt  main.c
(+154 files in other folders)
